# astro_core

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  make.bat  requirements.txt
data/test/celestrak/: README.txt  update.sh
data/test/iers/: README.txt  eopc04_IAU2000.62-now  update.sh  version.txt
source/: CMakeLists.txt
source/astro_core/: CMakeLists.txt
source/astro_core/base/: CMakeLists.txt  algorithm.h  build_config.h  compiler_specific.h  constants.h  convert.h  ctype.h  double_double.h  error.h  exception.h  levenshtein_distance.h  linked_list.h  result.h  reverse_view.h  source_location.h  static_vector.h  string.h  unreachable.h  unroll.h
source/astro_core/base/internal/: ctype_test.cc  double_double_test.cc  json.h  levenshtein_distance.cc  levenshtein_distance_test.cc  linked_list_test.cc  reverse_view_test.cc  source_location_test.cc  string.cc  string_test.cc  unreachable_test.cc  unroll_test.cc
source/astro_core/base/internal/tiny_lib/: tl_convert.h  tl_result.h  tl_static_vector.h
source/astro_core/body/: CMakeLists.txt  moon.h  sun.h
source/astro_core/body/internal/: moon.cc  moon_test.cc  sun.cc  sun_test.cc
source/astro_core/coordinate/: CMakeLists.txt  cartesian.h  frame.h  frame_transform.h  gcrf.h  geodetic.h  geographic.h  horizontal.h  itrf.h  qth.h  representation.h  representation_view.h  spherical.h  teme.h
source/astro_core/coordinate/internal/: cartesian.cc  cartesian_test.cc  frame_test.cc  frame_transform.cc  frame_transform_test.cc  gcrf.cc  gcrf_test.cc  geodetic.cc  geodetic_test.cc  geographic.cc  geographic_test.cc  horizontal.cc  horizontal_test.cc  itrf.cc  itrf_test.cc  qth.cc  qth_test.cc  representation_test.cc  representation_view_test.cc  spherical.cc  spherical_test.cc  teme.cc  teme_test.cc
source/astro_core/earth/: CMakeLists.txt  celestial_intermediate_pole.h  earth.h  geocentric_radius.h  intermediate_rotation.h  leap_second.h  leap_second_data.h  leap_second_iers.h  leap_second_table.h  nutation.h  orientation.h  orientation_data.h  orientation_iers_a.h  orientation_iers_b.h  orientation_table.h  precession.h  rotation.h  terrestrial_intermediate_origin.h
source/astro_core/earth/internal/: celestial_intermediate_pole.cc  celestial_intermediate_pole_test.cc  earth_test_data.h  geocentric_radius_test.cc  intermediate_rotation.cc  intermediate_rotation_test.cc  leap_second.cc  leap_second_data.cc  leap_second_data_test.cc  leap_second_iers.cc  leap_second_iers_test.cc  leap_second_table.cc  leap_second_table_test.cc  leap_second_test.cc  leap_second_test_data.h  nutation.cc  nutation_arguments.cc  nutation_arguments.h  nutation_arguments_test.cc  nutation_test.cc  orientation.cc  orientation_data.cc  orientation_data_test.cc  orientation_iers_a.cc  orientation_iers_a_test.cc  orientation_iers_b.cc  orientation_iers_b_test.cc  orientation_table.cc  orientation_table_test.cc  orientation_test.cc  orientation_test_data.h  precession.cc  precession_test.cc  rotation_test.cc  table.h  terrestrial_intermediate_origin_test.cc
source/astro_core/earth/internal/iers/: tab5.2a.h  tab5.2b.h  tab5.2d.h  tab5.3a.h  tab5.3b.h
source/astro_core/math/: CMakeLists.txt  math.h
source/astro_core/math/internal/: math_test.cc
source/astro_core/numeric/: CMakeLists.txt  numeric.h  polynomial.h
source/astro_core/numeric/internal/: matrix.h  matrix_test.cc  numeric_test.cc  polynomial_test.cc  vector.h  vector_test.cc
source/astro_core/parse/: CMakeLists.txt  arithmetic.h  field_parser.h  foreach_line.h  foreach_word.h
source/astro_core/parse/internal/: arithmetic_test.cc  field_parser_test.cc  foreach_line_test.cc  foreach_word_test.cc
source/astro_core/satellite/: CMakeLists.txt  alpha5.h  database.h  database_3le.h  database_transmitter_satnogs.h  doppler.h  footprint.h  international_designator.h  orbital_state.h  pass.h  tle.h  tle_parser.h
source/astro_core/satellite/internal/: alpha5_test.cc  database.cc  database_3le.cc  database_3le_test.cc  database_test.cc  database_transmitter_satnogs.cc  database_transmitter_satnogs_test.cc  doppler.cc  doppler_test.cc  footprint.cc  footprint_test.cc  international_designator.cc  international_designator_test.cc  orbital_state.cc  orbital_state_test.cc  pass.cc  pass_test.cc  tle.cc  tle_float_parser.h  tle_float_parser_test.cc  tle_parser.cc  tle_parser_test.cc  tle_test.cc
source/astro_core/satellite/internal/sgp4/: BUNDLE.txt  SGP4.cpp  SGP4.h
source/astro_core/table/: CMakeLists.txt  lookup.h  paged_table.h  shared_table.h
source/astro_core/table/internal/: lookup_test.cc  paged_table_test.cc  shared_table_test.cc
source/astro_core/time/: CMakeLists.txt  compare.h  epoch_convert.h  greenwich_sidereal_time.h  scale.h  time.h  time_difference.h
source/astro_core/time/format/: CMakeLists.txt  arithmetic.h  date_time.h  julian_date.h  modified_julian_date.h  system_clock.h  traits.h  unix_time.h  year_decimal_day.h
source/astro_core/time/format/internal/: arithmetic_test.cc  convert.h  convert_test.cc  date_time_core.h  date_time_core_test.cc  date_time_math.h  date_time_math_test.cc  date_time_test.cc  julian_date_test.cc  modified_julian_date_test.cc  system_clock_test.cc  unix_time_test.cc  year_decimal_day_test.cc
source/astro_core/time/internal/: compare_test.cc  epoch_convert_test.cc  greenwich_sidereal_time_test.cc  scale_convert.h  time.cc  time_test.cc
source/astro_core/unittest/: CMakeLists.txt  mock.h  test.h
source/astro_core/unittest/internal/: test-internal.h  test.cc  test_main.cc  unittest_test.cc
source/astro_core/version/: version.h
source/cmake/: build_configure.cmake  build_initialize.cmake  compiler_flags.cmake  external_libs.cmake  target.cmake  target_install.cmake  target_test.cmake
source/cmake/platform/: platform_apple.cmake  platform_unix.cmake  platform_unix_common.cmake  platform_win32.cmake  (+1 more)
source/validate/: Makefile  README.md  celestial_intermediate_coordinate.c  horizontal_test.py  transform_itrf_to_gcrf.c  transform_itrf_to_gcrf.py  transform_teme_to_itrf.c  transform_teme_to_itrf.py
(+4 files in other folders)
